# py_load_clinicaltrialsgov

./: .coverage  .gitignore  .pre-commit-config.yaml  DATASOURCE.md  Dockerfile  FRD_COMPLIANCE_ANALYSIS.md  LICENSE.md  Makefile  NOTICE  README.md  api_docs.html  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 306262f13a15_add_last_updated_api_str_to_raw_studies.py  88c6978d6685_create_initial_schema_from_schema_sql.py  e4bc992b21e8_add_unique_constraints_to_child_tables.py  fd9eb973ece2_add_locations_and_eligibility_tables.py
src/load_clinicaltrialsgov/: __init__.py  cli.py  config.py  orchestrator.py
src/load_clinicaltrialsgov/connectors/: __init__.py  interface.py  postgres.py
src/load_clinicaltrialsgov/extractor/: __init__.py  api_client.py
src/load_clinicaltrialsgov/models/: __init__.py  api_models.py
src/load_clinicaltrialsgov/sql/: __init__.py  schema.sql
src/load_clinicaltrialsgov/transformer/: __init__.py  transformer.py
src/py_load_clinicaltrialsgov/: cli.py  config.py  orchestrator.py
src/py_load_clinicaltrialsgov/connectors/: __init__.py  interface.py  postgres.py
src/py_load_clinicaltrialsgov/extractor/: api_client.py
src/py_load_clinicaltrialsgov/models/: api_models.py
src/py_load_clinicaltrialsgov/sql/: schema.sql
src/py_load_clinicaltrialsgov/transformer/: transformer.py
tests/: __init__.py  conftest.py
tests/integration/: NCT04267848.json  NCT04267848_complex.json  __init__.py  test_cli_e2e.py  test_delta_load.py  test_full_etl.py  test_full_etl_with_api.py  test_orchestrator_flow.py  test_postgres_connector.py  test_schema_validation.py
tests/unit/: __init__.py  test_api_client.py  test_api_client_resilience.py  test_api_models.py  test_cli.py  test_cli_init_db.py  test_connector_interface.py  test_init.py  test_orchestrator.py  test_postgres_connector.py  test_transformer.py  test_transformer_complex.py  test_transformer_data_quality.py  test_transformer_edge_cases.py  test_transformer_more_robustness.py  test_transformer_new.py  test_transformer_robustness.py  test_transformer_validation.py
